--- a/Замечания.md
+++ b/Замечания.md
@@ -1,1 +1,12 @@
-1. Роли пользователей следует вынести (Хотел бы использовать )
+0. Принцип DRY нарушен из-за написания комментариев и документациии.
+1. Я сам нарушил принцип DRY при создании странички detailed_list, так как использовал за основу страничку, которая уже существовала. (Файлы View/product/detailed.html.php, Controller/ProductController.php)
+2. KISS нарушен из-за создания "классов на все случаи жизни". В данном случае это классы в папках Billing, Communication и Discount.
+3. Принцип KISS нарушен в функции checkoutProcess в файле ./src/Service/Order/Basket.php. В самом комментарии к функции записано, что в одной функции проводятся все шаги по покупке, что противоречит KISS.
+4. YAGNI нарушен из-за создания классов Billing, Communication, Discount и Communication, реализация которых запланировано на будущее.
+5. Из п. 4 вытекает нарушение принципа YAGNI в классе Basket в функции checkout, которая тоже написана "на будущее".
+6. Из п. 4 вытекает нарушение принципа YAGNI в классе ProductController в функции postAction, которая использует нереализованный функционал.
+7. Нарушение POLA. Меня удивило, что консуктор класса Communication не только создает объект социльной сети, но и сразу отправляет в нее сообщение. Не очень очевидное поведение.
+8. Если я правильно понял закон Деметры, то использование свойств класса его нарушает. В таком случае класс Basket и Security нарушают закон Деметры.
+9. Много вопросов по закону Деметры. Нарушается ли закон Деметры, если в методе создается объект, а потом методов этого объекта создается еще один объект, чьи методы мы используем дальше?
+10. Возможные роли пользователей следует вынести в константы или в отдельный тип данных. Папка ./Model/
+
