--- a/Замечания.md
+++ b/Замечания.md
@@ -6,7 +6,7 @@
 5. Из п. 4 вытекает нарушение принципа YAGNI в классе Basket в функции checkout, которая тоже написана "на будущее".
 6. Из п. 4 вытекает нарушение принципа YAGNI в классе ProductController в функции postAction, которая использует нереализованный функционал.
 7. Нарушение POLA. Меня удивило, что консуктор класса Communication не только создает объект социльной сети, но и сразу отправляет в нее сообщение. Не очень очевидное поведение.
-8. Если я правильно понял закон Деметры, то использование свойств класса его нарушает. В таком случае класс Basket и Security нарушают закон Деметры.
-9. Много вопросов по закону Деметры. Нарушается ли закон Деметры, если в методе создается объект, а потом методов этого объекта создается еще один объект, чьи методы мы используем дальше?
+8. Нарушен закон Деметры в классе Security в функции authentication.
+9. Нарушен закон Деметры в классе ProductController во всех функциях. Цепочка $request->query->get()
 10. Возможные роли пользователей следует вынести в константы или в отдельный тип данных. Папка ./Model/
 
